* About
This file records my personal changelog to the [[https://github.com/seagle0128/doom-modeline][doom-modeline]] repository.  The
branch ‘original’ is synced with upstream; and the branch ‘ayah’ contains my
personal changes.

* Changes
** Move ‘major-mode’ to the end of the mode line
** Create the ‘dired’ modeline
Display the name of dired buffers with ‘doom-modeline-buffer-path’ face.
Changes include:
  - define the segment ‘buffer-info-dired’
  - define the ‘dired’ mode line
  - Register ‘dired’ mode line with ‘doom-modeline-alist’
** Create the ‘gnus’ modelines
Sets the modeline of Gnus relevant buffers with the ‘gnus-set-mode-line’ string.
Changes include:
  - Write ‘doom-modeline--format-gnus-mode-line’
  - Define the ‘gml’ segment
  - Define the ‘sml’ segment
  - Define the ‘aml’ segment
  - Define the ‘gnus-group’ mode line
  - Define the ‘gnus-summary’ mode line
  - Define the ‘gnus-article’ mode line
  - Register ‘gnus-{group,summary,article}’ with ‘doom-modeline-alist’
** Refashion the ‘calendar’ modeline
Allows the calendar modeline to access the ‘calendar-mode-line-format’ string.
Changes include:
  - Define the ‘cal’ and ‘cal-str’ segments
  - Redefine the ‘calendar’ and define the ‘calendar-mode’ mode lines
  - Register ‘calendar’ mode line with ‘doom-modeline-alist’